@@ -1,3 +1,11 @@
+2013-06-24  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
+
+	* libc/include/string.h (rawmemchr): Declare.
+	* libc/string/Makefile.am (ELIX_4_SOURCES): Add rawmemchr.c.
+	(CHEWOUT_FILES): Add rawmemchr.def.
+	* libc/string/Makefile.in: Regenerate.
+	* libc/string/rawmemchr.c: New file.
+
 2013-06-24  Terraneo Federico  <fede.tft@hotmail.it>
 
 	* libc/reent/reent.c (_reclaim_reent): Free also _misc and
